src/styles.scss
$fa-font-path: "~font-awesome/fonts";
@import '~font-awesome/scss/font-awesome.scss';

/* GLOBAL STYLES */

body {
    margin: 0;
    height: 100vh;
    width: 100vw;
}

body, h1, h2, p, input, button {
    font-family: Helvetica, sans-serif;
    font-weight: 300;
}

/* THEME COLORS */

/* LIGHT THEME */

$warm-gray: #dbdbd9;
$light-warm-gray: #ececea;
$lightest-warm-gray: #fbfbf9;
$dark-bluish-gray: #202037;
$dark-seafoam: #5a9a9a;
$light-seafoam: #9adada;

.app-wrapper {
    min-height: calc(100% - 140px);

    .main-content {
        min-height: calc(100vh - 140px - 10vw - 48px);
        padding: 140px 10vw 10vw 10vw;
    }

    &.light {
        background: $light-warm-gray;
        background: linear-gradient($warm-gray, $light-warm-gray, $warm-gray);
        color: $dark-bluish-gray;
        app-header,
        app-footer {
            background: $dark-seafoam;
            .decorative-bumper {
                background: $dark-seafoam;
                &.top {
                    background: linear-gradient($dark-seafoam 0%, $light-seafoam 25%, $dark-seafoam 90%, $light-seafoam 99%);          
                }
                &.bottom {
                    background: linear-gradient($dark-seafoam 0%, $light-seafoam 25%, $dark-seafoam 95%); 
                }
            }
        }
        app-header {
            background: linear-gradient($dark-seafoam, $light-seafoam);
        }
        app-header .title,
        app-footer .footer-content {
            color: $lightest-warm-gray;
            a.free-code-camp-link {
                &:hover, &:focus {
                    color: $dark-bluish-gray;
                }
            }
        }
        li {
            background: $lightest-warm-gray;
            color: $dark-bluish-gray;
            &:hover, &:focus, &.selected {
                border-color: $dark-seafoam;
                .arrow {
                    color: $dark-seafoam;
                }
            }             
        }
        button {
            color: $dark-seafoam;
            &.random-btn {
                border-color: $dark-seafoam;
                background: $lightest-warm-gray;
            }
            &:hover, &:focus {
                background: $dark-seafoam;
                color: $lightest-warm-gray;
                border-color: $dark-seafoam;
            }
        }
        input {
            border-color: $dark-seafoam;
        }
        .loading-icon {
            color: $dark-seafoam;
        }
    }
    &.dark {
        background: #111;
        color: #eee;
    }
}

